# DiscordGPT

./: README.md  pyproject.toml
discordgpt/: __init__.py
